--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -25,6 +25,14 @@
 
     <!-- Status Panel -->
     <div id="status-panel" class="section card hidden">
+      <div id="license-banner" class="alert alert-danger hidden">
+        <span class="alert-icon">&#x1F510;</span>
+        <div>
+          <p class="alert-title">Licença não ativa</p>
+          <p class="alert-detail">Cole seu código de acesso nas configurações para ativar o Guardrail.</p>
+        </div>
+      </div>
+      <div class="divider"></div>
       <div class="status-row">
         <span class="label">Sessão</span>
         <span id="session-status" class="badge badge-off">Inativa</span>
